--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,7 @@ imports:
 RoxygenNote: 7.2.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
